add main and analytics page with basics components

--- a/frontend/src/app/styles/constants/colors.scss
+++ b/frontend/src/app/styles/constants/colors.scss
@@ -6,7 +6,7 @@
     --border-color: var(--grey-400);
 
     /* background */
-    --bg-color: var(--white);
+    --bg-color: var(--grey-50);
     --select-background-color: var(--secondary-color);
     --bg-disabled-color: var(--grey-100);
     --overlay: rgba(42, 67, 86, 0.5);
