--- a/frontend/src/app/styles/layout/layout.scss
+++ b/frontend/src/app/styles/layout/layout.scss
@@ -3,13 +3,13 @@
 }
 
 .ant-layout-sider {
-    background-color: transparent;
+    background-color: transparent !important;
     margin: 20px 15px;
 }
 
 .ant-layout-content {
     background-color: transparent;
-    margin-bottom: 2rem;
+    margin: 10px 0px;
 }
 
 .ant-layout-header {
