--- a/frontend/src/shared/ui/block/block.module.scss
+++ b/frontend/src/shared/ui/block/block.module.scss
@@ -1,10 +1,9 @@
 .Block {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     padding: 20px;
-    margin: 20px 15px;
+    margin: 10px 15px;
     border: 1px solid var(--border-color);
     border-radius: 8px;
     background-color: var(--white);
-    width: 100%;
 }
