--- a/frontend/src/widgets/navbar/ui/navbar.module.scss
+++ b/frontend/src/widgets/navbar/ui/navbar.module.scss
@@ -1,8 +1,5 @@
 .Navbar {
-    .navbar-menu {
-        margin: 5px 15px;
-        border: 1px solid var(--border-color);
-        border-radius: 8px;
-        background-color: var(--white);
+    .menu {
+
     }
 }
