--- a/frontend/src/widgets/header/ui/header.module.scss
+++ b/frontend/src/widgets/header/ui/header.module.scss
@@ -7,7 +7,7 @@
         align-items: center;
         color: var(--black);
         font-size: 1.5rem;
-        margin: 10px 0 10px 35px;
+        margin: 10px;
         text-transform: capitalize;
     }
 
