add import page with basic components

--- a/frontend/src/app/styles/layout/layout.scss
+++ b/frontend/src/app/styles/layout/layout.scss
@@ -8,6 +8,8 @@
 }
 
 .ant-layout-content {
+    display: flex;
+    flex-direction: column;
     background-color: transparent;
     margin: 10px 0px;
 }
