--- a/frontend/src/app/styles/constants/colors.scss
+++ b/frontend/src/app/styles/constants/colors.scss
@@ -1,6 +1,6 @@
 :root {
     /* base colors */
-    --primary-color: #4392ce;
+    --primary-color: #1677ff;
     --secondary-color: #e6eff6;
     --active-color: #1890ff;
     --border-color: var(--grey-400);
