--- a/frontend/src/app/styles/layout/layout.scss
+++ b/frontend/src/app/styles/layout/layout.scss
@@ -4,14 +4,14 @@
 
 .ant-layout-sider {
     background-color: transparent !important;
-    margin: 20px 15px;
+    margin: 20px 0 0 15px;
 }
 
 .ant-layout-content {
     display: flex;
     flex-direction: column;
     background-color: transparent;
-    margin: 10px 0px;
+    margin: 5px 0;
 }
 
 .ant-layout-header {
