--- a/frontend/src/features/files-history-table/ui/filesHistoryTable.module.scss
+++ b/frontend/src/features/files-history-table/ui/filesHistoryTable.module.scss
@@ -1,7 +1,11 @@
 .table {
     min-width: 100%;
+}
 
-    .table-title {
-        margin: 0 5px 20px;
-    }
+.table-title {
+    margin: 0 5px 20px;
+}
+
+.table-controls {
+    margin: 0 5px 20px;
 }
