--- a/frontend/src/widgets/header/ui/header.module.scss
+++ b/frontend/src/widgets/header/ui/header.module.scss
@@ -20,6 +20,11 @@
             width: 45px;
             height: 45px;
         }
+
+        .img {
+            width: 45px;
+            height: 45px;
+        }
     }
 }
 
