--- a/frontend/src/app/styles/components/upload.scss
+++ b/frontend/src/app/styles/components/upload.scss
@@ -1,3 +1,13 @@
+.ant-upload-drag {
+    min-height: 0 !important;
+    border: 1.5px solid #E0F1FF !important;
+    padding: 8px 5px;
+
+    .ant-upload {
+        padding: 0;
+    }
+}
+
 .ant-upload-list-item-info {
     margin: 10px;
 }
@@ -14,6 +24,19 @@
     margin-top: 10px;
 }
 
-.ant-upload-list-item-error, .ant-upload-list-item-error .ant-upload-text-icon > .anticon, .ant-upload-list-item-error .ant-upload-list-item-name {
-    color: black;
+.ant-upload-list-item-name {
+    font-size: 1rem;
+}
+
+.ant-upload-list-item .ant-upload-list-item-undefined {
+    background-color: var(--white) !important;
+}
+
+.ant-upload-list-item:hover {
+    background-color: var(--white) !important;
+}
+
+
+.ant-tooltip-placement-top {
+    display: none !important;
 }
