--- a/frontend/src/features/filter-form/ui/filterForm.module.scss
+++ b/frontend/src/features/filter-form/ui/filterForm.module.scss
@@ -1,31 +1,60 @@
 .form {
     display: flex;
+    flex-direction: column;
 }
 
 .filter {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    width: 35rem;
 }
 
 .title {
-    margin-top: 0;
-    margin-bottom: 10px;
+    margin: 0;
     font-size: 1rem;
-    font-weight: bold;
+}
+
+.tags {
+    margin-bottom: 10px;
+}
+
+.tags-title {
+    font-size: 1rem;
+    margin-right: 10px;
+}
+
+.tags-item {
+    font-size: 1rem;
+    background-color: var(--grey-100);
+}
+
+.tags-item-active {
+    font-size: 1rem;
 }
 
 .field {
     margin: 5px 0;
 }
 
-.expiredDateField {
+.item {
     display: flex;
-    margin-top: 5px;
 }
 
-.expirationSwitch {
+.icon {
+    cursor: pointer;
+    font-size: 1.15rem;
+    margin-left: 10px;
+    color: var(--grey-600);
+
+}
+
+.expired-date-field {
+    display: flex;
+    align-items: center;
+    margin: 15px 0;
+}
+
+.expiration-switch {
     margin-right: 10px;
 }
 
@@ -35,7 +64,7 @@
     align-items: center;
 }
 
-.submitButton {
-    width: 10rem;
-    margin-top: 15px;
+.submit-button {
+    width: 100%;
+    margin-top: 5px;
 }
