--- a/frontend/src/pages/main-page/ui/mainPage.module.scss
+++ b/frontend/src/pages/main-page/ui/mainPage.module.scss
@@ -1,8 +1,8 @@
-.title {
-    margin: 0 !important;
+.upload-block {
+    display: flex;
+    width: 50%;
 }
 
-.description {
-    margin: 10px 0;
-    font-size: 1.1rem;
+.table-block {
+    display: flex;
 }
