--- a/frontend/src/shared/ui/block/block.module.scss
+++ b/frontend/src/shared/ui/block/block.module.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     padding: 20px;
-    margin: 10px 15px;
+    margin: 15px;
     border: 1px solid var(--border-color);
     border-radius: 8px;
     background-color: var(--white);
