add bar chart and filterTable row selection

--- a/frontend/src/app/styles/components/table.scss
+++ b/frontend/src/app/styles/components/table.scss
@@ -21,7 +21,8 @@
 }
 
 .ant-table-tbody > tr.ant-table-row-selected > td {
-    background: var(--secondary-color) !important;
+    color: var(--white) !important;
+    background: var(--active-color) !important;
 }
 
 .ant-table {
