--- a/frontend/src/app/styles/components/buttons.scss
+++ b/frontend/src/app/styles/components/buttons.scss
@@ -1,62 +1,62 @@
-//.ant-btn {
-//    display: flex;
-//    justify-content: center;
-//    align-items: center;
-//    padding: 8px 22px;
-//    margin: 0 5px;
-//    cursor: pointer;
-//    font-size: 0.9rem;
-//    border: none;
-//    border-radius: var(--border-radius);
-//    box-shadow: none;
-//    min-width: 5rem;
-//    height: 40px;
-//}
-//
-//.ant-btn-primary,
-//.ant-btn-primary:focus {
-//    background-color: var(--primary-color);
-//    color: var(--white);
-//}
-//
-//.ant-btn-primary:hover {
-//    box-shadow: none;
-//    background-color: #6cace4;
-//    color: var(--white);
-//}
-//
-//.ant-btn-default,
-//.ant-btn-default:focus {
-//    background-color: var(--secondary-color);
-//    color: #025ea1;
-//}
-//
-//.ant-btn-default:hover {
-//    background-color: #f2f7fa;
-//    color: #1890ff;
-//}
-//
-//.ant-btn-ghost,
-//.ant-btn-ghost:focus {
-//    background-color: var(--white);
-//    color: var(--primary-color);
-//    border: 1px solid var(--border-color);
-//    min-width: 3rem;
-//}
-//
-//.ant-btn-ghost:hover {
-//    background-color: var(--secondary-color);
-//    color: var(--active-color);
-//}
-//
-//.ant-btn-dashed,
-//.ant-btn-dashed:focus {
-//    background-color: var(--secondary-color);
-//    color: var(--active-color);
-//    border: 2px solid var(--primary-color);
-//    min-width: 3rem;
-//}
-//
-//.ant-btn > .anticon + span, .ant-btn > span + .anticon {
-//    margin-left: 0;
-//}
+.ant-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 8px 22px;
+    margin: 0 5px;
+    cursor: pointer;
+    font-size: 0.9rem;
+    border: none;
+    border-radius: var(--border-radius);
+    box-shadow: none;
+    min-width: 5rem;
+    height: 40px;
+}
+
+.ant-btn-primary,
+.ant-btn-primary:focus {
+    background-color: var(--primary-color);
+    color: var(--white);
+}
+
+.ant-btn-primary:hover {
+    box-shadow: none;
+    background-color: #6cace4;
+    color: var(--white);
+}
+
+.ant-btn-default,
+.ant-btn-default:focus {
+    background-color: var(--secondary-color);
+    color: #025ea1;
+}
+
+.ant-btn-default:hover {
+    background-color: #f2f7fa;
+    color: #1890ff;
+}
+
+.ant-btn-ghost,
+.ant-btn-ghost:focus {
+    background-color: var(--white);
+    color: var(--primary-color);
+    border: 1px solid var(--border-color);
+    min-width: 3rem;
+}
+
+.ant-btn-ghost:hover {
+    background-color: var(--secondary-color);
+    color: var(--active-color);
+}
+
+.ant-btn-dashed,
+.ant-btn-dashed:focus {
+    background-color: var(--secondary-color);
+    color: var(--active-color);
+    border: 2px solid var(--primary-color);
+    min-width: 3rem;
+}
+
+.ant-btn > .anticon + span, .ant-btn > span + .anticon {
+    margin-left: 0;
+}
